# NuvioMobile

./: .gitignore  AGENTS.md  README.md  gradle.properties  nuviomobile.jks
.github/workflows/: release-mobile.yml
MPVKit/Sources/DesktopMPVBridge/: Bridge.swift  NuvioControlsView.swift  NuvioEpisodesPanel.swift  NuvioMPVView.swift  NuvioPlayerPrewarmer.swift  NuvioPlayerState.swift  NuvioPlayerWindow.swift  NuvioSharedComponents.swift  NuvioSourcesPanel.swift
androidApp/: build.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidFull/kotlin/com/nuvio/app/features/player/: PlatformPlaybackDataSourceFactory.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/: DeviceCapabilityRegistrar.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/core/coroutines/: RunBlocking.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/core/i18n/: SyncStrings.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/core/network/: PrivateBackendUrlStorage.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/core/ui/: PlatformImageLoader.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/features/addons/: AddonPlatform.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/features/player/: PlaybackMediaItems.android.kt  PlayerEngine.android.kt  PlayerSettingsStorage.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/features/settings/: BuiltInProvidersStorage.android.kt  ThemeSettingsStorage.android.kt
composeApp/src/androidMain/kotlin/com/nuvio/app/features/trakt/: TraktPlatformClock.android.kt
composeApp/src/androidMain/res/drawable/: splash_none.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/androidMain/res/values-es/: strings.xml
composeApp/src/androidMain/res/values-v31/: themes.xml
composeApp/src/androidMain/res/xml/: locale_config.xml
composeApp/src/androidPlaystore/kotlin/com/nuvio/app/features/player/: PlatformPlaybackDataSourceFactory.android.kt
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-cs/: strings.xml
composeApp/src/commonMain/composeResources/values-de/: strings.xml
composeApp/src/commonMain/composeResources/values-el/: strings.xml
composeApp/src/commonMain/composeResources/values-es/: strings.xml
composeApp/src/commonMain/composeResources/values-fr/: strings.xml
composeApp/src/commonMain/composeResources/values-hu/: strings.xml
composeApp/src/commonMain/composeResources/values-id/: strings.xml
composeApp/src/commonMain/composeResources/values-in/: strings.xml
composeApp/src/commonMain/composeResources/values-it/: strings.xml
composeApp/src/commonMain/composeResources/values-ja/: strings.xml
composeApp/src/commonMain/composeResources/values-nb/: strings.xml
composeApp/src/commonMain/composeResources/values-pl/: strings.xml
composeApp/src/commonMain/composeResources/values-pt/: strings.xml
composeApp/src/commonMain/composeResources/values-pt-rBR/: strings.xml
composeApp/src/commonMain/composeResources/values-sk/: strings.xml
composeApp/src/commonMain/composeResources/values-tr/: strings.xml
composeApp/src/commonMain/kotlin/com/nuvio/app/: App.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/auth/: AuthRepository.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/content/: ContentSource.kt  PrivateBackendContentSource.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/coroutines/: RunBlocking.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/i18n/: LocalizedUiText.kt  SyncStrings.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/network/: BackendAuth.kt  PrivateBackend.kt  PrivateBackendUrlStorage.kt  SupabaseProvider.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/storage/: LocalAccountDataCleaner.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/sync/: ProfileSettingsSync.kt  SyncManager.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/core/ui/: CineXLoader.kt  NuvioFloatingPrompt.kt  NuvioSecondaryClick.kt  NuvioShelfComponents.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/addons/: AddonModels.kt  AddonRepository.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/auth/: AuthScreen.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/catalog/: CatalogData.kt  CatalogRepository.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/collection/: CollectionEditorRepository.kt  CollectionEditorScreen.kt  CollectionManagementScreen.kt  CollectionModels.kt  CollectionRepository.kt  FolderDetailRepository.kt  FolderDetailScreen.kt  TmdbCollectionSourceResolver.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/debrid/: DebridProvider.kt  DebridProviderApis.kt  DirectDebridResolver.kt  SharedTorboxKeyService.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/details/: MetaDetailsModels.kt  MetaDetailsParser.kt  MetaDetailsRepository.kt  MetaDetailsScreen.kt  MetaScreenSettingsRepository.kt  RatingService.kt  SeriesPlaybackResolver.kt
composeApp/src/commonMain/kotlin/com/nuvio/app/features/downloads/: DownloadsModels.kt  (+1 more)
composeApp/src/desktopMain/kotlin/com/nuvio/app/: DesktopApp.kt
composeApp/src/desktopMain/native/macos/: player_bridge.mm
composeApp/src/desktopMain/resources/player-ui/: controls.css  controls.html  controls.js
composeApp/src/iosMain/kotlin/com/nuvio/app/: MainViewController.kt
composeApp/src/wasmJsMain/kotlin/com/nuvio/app/: Platform.web.kt  main.kt
composeApp/src/wasmJsMain/resources/: index.html  styles.css
desktopQt/: CMakeLists.txt  README.md
desktopQt/qml/: PlayerOverlay.qml
desktopQt/src/: main.cpp  mpv_render_widget.cpp  mpv_render_widget.h  native_player_bridge.cpp  native_player_bridge.h  player_overlay_controller.cpp  player_overlay_controller.h  player_surface_widget.cpp  player_surface_widget.h
docs/: RELEASING.md
gradle/: libs.versions.toml
iosApp/Configuration/: Version.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp/Player/: MPVPlayerBridge.swift
scripts/: run-qt6-desktop.sh
(+164 files in other folders)
